--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wxt-react-starter",
+  "name": "chrome-wxt-bs-dllink-clicker",
   "description": "manifest.json description",
   "private": true,
   "version": "0.0.1",
